--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous"
 />
+<script src="https://maps.googleapis.com/maps/api/js?&v=3.exp&libraries=geometry,drawing,places&key="></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
